    - Fix bug when user selects too much in BookView and then tries to change case
    - Fix bug in Delete Unused Media when css urls do not use quotes 
    - Try to set all ways of updating the ncx to use 2 character indentation of head element
    - Fix Building Relocatable Python on Mac build instructions to remove BeautifulSoup4 requirement

  New Features
    - create sgc-nav.css stylesheet for nav and allow templates in Prefs Dir for user to control it 
    - Add General Setting to allow user to set own temporary directory location
    - Add Qt Stylesheet support - Recognize and load "qt_styles.qss" file if stored in Sigil Preferences folder


Sigil-0.9.5
   Bug Fixes
    - Fix regression when ImportHTML in gathering HTML based DC. metadata
    - Fix regression - remove incorrect use of opf:scheme from dc:creator and dc:contributor under epub2
    - Fix regression - the guide reference tag is always a void tag
    - Fix issues with hunspell spell checking under Windows when non-ascii paths to dictionaries
    - Fix issues with overridding the prefs directory on Windows with non-ascii paths
    - Fix broken manual "Check" button on W3C stylesheet validation's generated html form.
    - Fix media-type recognition for .m4a and .m4v file extenstions in main Sigil and plugin code
    - Treat ruby and rt as inline tags when pretty-printing in Sigils and for plugins

   New Features
    - Allow user to choose what level of CSS gets used in the "Validate Stylesheets
         With W3C" tool via user preference (General).

Sigil-0.9.4
   Bug Fixes
    - Prevent the use of zero length key fields when obfuscating fonts
    - IDPF font obfuscation key accepts all input except as specified
    - Fix typo in main.ui accelerator assignment
    - Update Transifex project URL
    - Prevent NCX Weirdness with ampersand added when editing NCX in codeview and TOC widget showing
    - Fix lost namespace attributes on metadata tag