@@ -35,7 +35,7 @@ import unipath
 from unipath import pathof
 import unicodedata
 
-_launcher_version=20160425
+_launcher_version=20160605
 
 _PKG_VER = re.compile(r'''<\s*package[^>]*version\s*=\s*["']([^'"]*)['"][^>]*>''',re.IGNORECASE)
 
@@ -144,6 +144,7 @@ class Wrapper(object):
         self.spine_ppd = None
         self.spine = []
         self.guide = []
+        self.bindings = []
         self.package_tag = None
         self.epub_version = None
         # self.metadata_attr = None
@@ -164,6 +165,7 @@ class Wrapper(object):
             self.guide = op.get_guide()
             self.package_tag = op.get_package_tag()
             self.epub_version = op.get_epub_version()
+            self.bindings = op.get_bindings()
             # self.metadata = op.get_metadata()
             # self.metadata_attr = op.get_metadata_attr()
             self.metadataxml = op.get_metadataxml()
@@ -214,7 +216,7 @@ class Wrapper(object):
 
     def build_manifest_xml(self):
         manout = []
-        manout.append('<manifest>\n')
+        manout.append('  <manifest>\n')
         for id in sorted(self.id_to_mime):
             href = quoteurl(self.id_to_href[id])
             mime = self.id_to_mime[id]
@@ -230,8 +232,8 @@ class Wrapper(object):
             overlay = self.id_to_over[id]
             if overlay is not None:
                 over = ' media-overlay="%s"' % overlay
-            manout.append('<item id="%s" href="%s" media-type="%s"%s%s%s />\n' % (id, href, mime, props, fall, over))
-        manout.append('</manifest>\n')
+            manout.append('    <item id="%s" href="%s" media-type="%s"%s%s%s />\n' % (id, href, mime, props, fall, over))
+        manout.append('  </manifest>\n')
         return "".join(manout)
 
     def build_spine_xml(self):
@@ -247,7 +249,7 @@ class Wrapper(object):
         pagemapid = self.getpagemapid()
         if pagemapid is not None:
             map = ' page-map="%s"' % pagemapid
-        spineout.append('<spine%s%s%s>\n' %(ppd, ncx, map))
+        spineout.append('  <spine%s%s%s>\n' %(ppd, ncx, map))
         for (id, linear, properties) in self.spine:
             lin = ''
             if linear is not None:
@@ -255,18 +257,28 @@ class Wrapper(object):
             props = ''
             if properties is not None:
                 props = ' properties="%s"' % properties
-            spineout.append('<itemref idref="%s"%s%s/>\n' % (id, lin, props))
-        spineout.append('</spine>\n')
+            spineout.append('    <itemref idref="%s"%s%s/>\n' % (id, lin, props))
+        spineout.append('  </spine>\n')
         return "".join(spineout)
 
     def build_guide_xml(self):
         guideout = []
-        guideout.append('<guide>\n')
-        for (type, title, href) in self.guide:
-            href = quoteurl(href)
-            guideout.append('<reference type="%s" href="%s" title="%s"/>\n' % (type, href, title))
-        guideout.append('</guide>\n')
+        if len(self.guide) > 0 or self.epub_version.startswith('2'):
+            guideout.append('  <guide>\n')
+            for (type, title, href) in self.guide:
+                href = quoteurl(href)
+                guideout.append('    <reference type="%s" href="%s" title="%s"/>\n' % (type, href, title))
+            guideout.append('  </guide>\n')
         return "".join(guideout)
+
+    def build_bindings_xml(self):
+        bindout = []
+        if len(self.bindings) > 0 and self.epub_version.startswith('3'):
+            bindout.append('  <bindings>\n')
+            for (mtype, handler) in self.bindings:
+                bindout.append('    <mediaType media-type="%s" handler="%s"/>\n' % (mtype, handler))
+            bindout.append('  </bindings>\n')
+        return "".join(bindout)
 
     def build_opf(self):
         data = []
@@ -276,6 +288,7 @@ class Wrapper(object):
         data.append(self.build_manifest_xml())
         data.append(self.build_spine_xml())
         data.append(self.build_guide_xml())
+        data.append(self.build_bindings_xml())
         data.append('</package>\n')
         return "".join(data)
 
@@ -352,6 +365,24 @@ class Wrapper(object):
                 properties = properties.lower()
             spine.append((sid, linear, properties))
         self.spine = spine
+        self.modified['OEBPS/content.opf'] = 'file'
+
+    def getbindings_epub3(self):
+        return self.bindings
+
+    def setbindings_epub3(self, new_bindings):
+        bindings = []
+        for (mtype, handler) in new_bindings:
+            mtype = unicode_str(mtype)
+            handler = unicode_str(handler)
+            if mtype is None or mtype == "":
+                continue
+            if handler is None or handler == "":
+                continue
+            if handler not in self.id_to_href:
+                raise WrapperException('Handler not in Manifest')
+            bindings.append((mtype, handler))
+        self.bindings = bindings
         self.modified['OEBPS/content.opf'] = 'file'
 
     def spine_insert_before(self, pos, sid, linear, properties=None):
